fixed 1. 적용 폰트가 설정 언어를 무시하고 한글로 나오던 오류 수정

--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -196,7 +196,7 @@
             android:background="@drawable/button_line"
             android:fontFamily="@font/font"
             android:layout_marginTop="10dp"
-            android:text="적용" />
+            android:text="@string/적용" />
     </LinearLayout>
 
     <LinearLayout
